--- a/qutebrowser/keys.conf
+++ b/qutebrowser/keys.conf
@@ -29,6 +29,14 @@
 # with Shift. For special keys (with `<>`-signs), you need to explicitly add
 # `Shift-` to match a key pressed with shift.  You can bind multiple commands
 # by separating them with `;;`.
+#
+# Note that default keybindings are always bound, and need to be explicitly
+# unbound if you wish to remove them:
+#
+# <unbound>
+#   keychain
+#   keychain2
+#   ...
 
 [!normal]
 
@@ -342,7 +350,7 @@ download
 download-cancel
     ad
 
-download-remove --all
+download-clear
     cd
 
 view-source
@@ -427,9 +435,13 @@ follow-selected -t
 # supported in this mode.
 # Useful hidden commands to map in this section:
 #  * `open-editor`: Open a texteditor with the focused field.
+#  * `paste-primary`: Paste primary selection at cursor position.
 
 open-editor
     <Ctrl-E>
+
+paste-primary
+    <Shift-Ins>
 
 [hint]
 # Keybindings for hint mode.
