--- a/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/qutebrowser.conf
@@ -27,7 +27,7 @@
 [general]
 # General/miscellaneous options.
 #
-# ignore-case:
+# ignore-case (IgnoreCase):
 #     Whether to find text on a page case-insensitively.
 #         true: Search case-insensitively
 #         false: Search case-sensitively
@@ -41,14 +41,14 @@
 #
 # startpage (List):
 #     The default page(s) to open at the start, separated by commas.
-#     Default: https://www.duckduckgo.com
+#     Default: https://duckduckgo.com
 #
 # default-page (FuzzyUrl):
 #     The page to open if :open -t/-b/-w is used without URL. Use
 #     `about:blank` for a blank page.
 #     Default: ${startpage}
 #
-# auto-search:
+# auto-search (AutoSearch):
 #     Whether to start a search when something else than a URL is
 #     entered.
 #         naive: Use simple/naive check.
@@ -67,8 +67,9 @@
 #
 # editor (ShellCommand):
 #     The editor (and arguments) to use for the `open-editor` command.
-#     Use `{}` for the filename. The value gets split like in a shell,
-#     so you can use `"` or `'` to quote arguments.
+#     The arguments get split like in a shell, so you can use `"` or `'`
+#     to quote them.
+#     `{}` gets replaced by the filename of the file to be edited.
 #     Default: gvim -f "{}"
 #
 # editor-encoding (Encoding):
@@ -115,7 +116,7 @@
 #     used.
 #     Default:
 #
-# new-instance-open-target:
+# new-instance-open-target (String):
 #     How to open links in an existing instance if a new one is
 #     launched.
 #         tab: Open a new tab in the existing window and activate the
@@ -129,20 +130,28 @@
 #         window: Open in a new window.
 #     Default: tab
 #
-# log-javascript-console (Bool):
-#     Whether to log javascript console messages.
-#     Valid values: true, false
-#     Default: false
+# log-javascript-console (String):
+#     How to log javascript console messages.
+#         none: Don't log messages.
+#         debug: Log messages with debug level.
+#         info: Log messages with info level.
+#     Default: debug
 #
 # save-session (Bool):
 #     Whether to always save the open pages.
 #     Valid values: true, false
 #     Default: false
 #
-# session-default-name:
+# session-default-name (SessionName):
 #     The name of the session to save by default, or empty for the last
 #     loaded session.
 #     Default:
+#
+# url-incdec-segments (FlagList):
+#     The URL segments where `:navigate increment/decrement` will search
+#     for a number.
+#     Valid values: host, path, query, anchor
+#     Default: path,query
 ignore-case = smart
 wrap-search = true
 startpage = https://www.duckduckgo.com
@@ -159,9 +168,10 @@ xss-auditing = false
 site-specific-quirks = true
 default-encoding = 
 new-instance-open-target = tab
-log-javascript-console = false
+log-javascript-console = none
 save-session = true
 session-default-name = 
+url-incdec-segments = path,query
 
 [ui]
 # General options related to the user interface.
@@ -189,7 +199,7 @@ session-default-name =
 #     Valid values: true, false
 #     Default: false
 #
-# confirm-quit:
+# confirm-quit (ConfirmQuit):
 #     Whether to confirm quitting the application.
 #         always: Always show a confirmation.
 #         multiple-tabs: Show a confirmation if multiple tabs are
@@ -215,7 +225,7 @@ session-default-name =
 #     Valid values: true, false
 #     Default: false
 #
-# user-stylesheet:
+# user-stylesheet (UserStyleSheet):
 #     User stylesheet to use (absolute filename, filename relative to
 #     the config directory or CSS string). Will expand environment
 #     variables.
@@ -230,10 +240,10 @@ session-default-name =
 #     Valid values: true, false
 #     Default: false
 #
-# remove-finished-downloads (Bool):
-#     Whether to remove finished downloads automatically.
-#     Valid values: true, false
-#     Default: false
+# remove-finished-downloads (Int):
+#     Number of milliseconds to wait before removing finished downloads.
+#     Will not be removed if value is -1.
+#     Default: -1
 #
 # hide-statusbar (Bool):
 #     Whether to hide the statusbar unless a message is shown.
@@ -282,7 +292,7 @@ frame-flattening = false
 user-stylesheet = ::-webkit-scrollbar { width: 0px; height: 0px; }
 css-media-type = 
 smooth-scrolling = true
-remove-finished-downloads = false
+remove-finished-downloads = -1
 hide-statusbar = false
 statusbar-padding = 1,1,0,0
 window-title-format = {perc}{title}{title_sep}qutebrowser
@@ -302,7 +312,7 @@ hide-wayland-decoration = false
 #     Value to send in the `accept-language` header.
 #     Default: en-US,en
 #
-# referer-header (Referer):
+# referer-header (String):
 #     Send the Referer header
 #         always: Always send.
 #         never: Never send; this is not recommended, as some sites may
@@ -311,11 +321,11 @@ hide-wayland-decoration = false
 #     protect your privacy, but shouldn't break any sites.
 #     Default: same-domain
 #
-# user-agent:
+# user-agent (UserAgent):
 #     User agent to send. Empty to send the default.
 #     Default:
 #
-# proxy:
+# proxy (Proxy):
 #     The proxy to use.
 #     In addition to the listed values, you can use a `socks://...` or
 #     `http://...` URL.
@@ -354,14 +364,14 @@ dns-prefetch = true
 #     Valid values: true, false
 #     Default: true
 #
-# download-path-suggestion:
+# download-path-suggestion (String):
 #     What to display in the download filename input.
 #         path: Show only the download path.
 #         filename: Show only download filename.
 #         both: Show download path and filename.
 #     Default: path
 #
-# timestamp-format (String):
+# timestamp-format (TimestampTemplate):
 #     How to format timestamps (e.g. for history)
 #     Default: %Y-%m-%d
 #
@@ -396,6 +406,14 @@ dns-prefetch = true
 #     size if there are no scrollbars.
 #     Valid values: true, false
 #     Default: false
+#
+# scrollbar-width (Int):
+#     Width of the scrollbar in the completion window (in px).
+#     Default: 12
+#
+# scrollbar-padding (Int):
+#     Padding of scrollbar handle in completion window (in px).
+#     Default: 2
 auto-open = true
 download-path-suggestion = path
 timestamp-format = %Y-%m-%d
@@ -405,6 +423,8 @@ cmd-history-max-items = 100
 web-history-max-items = 1000
 quick-complete = true
 shrink = false
+scrollbar-width = 12
+scrollbar-padding = 2
 
 [input]
 # Options related to input modes.
@@ -434,7 +454,7 @@ shrink = false
 #     Valid values: true, false
 #     Default: false
 #
-# forward-unbound-keys:
+# forward-unbound-keys (String):
 #     Whether to forward unbound keys to the webview in normal mode.
 #         all: Forward all unbound keys.
 #         auto: Forward unbound non-alphanumeric keys.
@@ -486,14 +506,14 @@ mouse-zoom-divider = 512
 #     Valid values: true, false
 #     Default: false
 #
-# select-on-remove:
+# select-on-remove (SelectOnRemove):
 #     Which tab to select when the focused tab is removed.
 #         left: Select the tab on the left.
 #         right: Select the tab on the right.
 #         previous: Select the previously selected tab.
 #     Default: right
 #
-# new-tab-position:
+# new-tab-position (NewTabPosition):
 #     How new tabs are positioned.
 #         left: On the left of the current tab.
 #         right: On the right of the current tab.
@@ -501,7 +521,7 @@ mouse-zoom-divider = 512
 #         last: At the right end.
 #     Default: right
 #
-# new-tab-position-explicit:
+# new-tab-position-explicit (NewTabPosition):
 #     How new tabs opened explicitly are positioned.
 #         left: On the left of the current tab.
 #         right: On the right of the current tab.
@@ -509,7 +529,7 @@ mouse-zoom-divider = 512
 #         last: At the right end.
 #     Default: last
 #
-# last-close:
+# last-close (String):
 #     Behavior when the last tab is closed.
 #         ignore: Don't do anything.
 #         blank: Load a blank page.
@@ -518,7 +538,7 @@ mouse-zoom-divider = 512
 #         close: Close the window.
 #     Default: ignore
 #
-# show (TabBarShow):
+# show (String):
 #     When to show the tab bar
 #         always: Always show the tab bar.
 #         never: Always hide the tab bar.
@@ -541,7 +561,7 @@ mouse-zoom-divider = 512
 #     Valid values: true, false
 #     Default: true
 #
-# close-mouse-button:
+# close-mouse-button (String):
 #     On which mouse button to close tabs.
 #         right: Close tabs on right-click.
 #         middle: Close tabs on middle-click.
@@ -585,6 +605,11 @@ mouse-zoom-divider = 512
 #     * `{scroll_pos}`: The page scroll position.
 #     Default: {index}: {title}
 #
+# title-alignment (TextAlignment):
+#     Alignment of the text inside of tabs
+#     Valid values: left, right, center
+#     Default: left
+#
 # mousewheel-tab-switching (Bool):
 #     Switch between tabs using the mouse wheel.
 #     Valid values: true, false
@@ -613,6 +638,7 @@ width = 20%
 indicator-width = 3
 tabs-are-windows = false
 title-format = {index}: {title}
+title-alignment = left
 mousewheel-tab-switching = true
 padding = 0,0,5,5
 indicator-padding = 2,2,0,4
@@ -785,7 +811,7 @@ cache-size = 52428800
 #     Valid values: true, false
 #     Default: true
 #
-# cookies-accept:
+# cookies-accept (String):
 #     Control which cookies to accept.
 #         all: Accept all cookies.
 #         no-3rdparty: Accept cookies from the same origin only.
@@ -821,6 +847,13 @@ cache-size = 52428800
 #     to exactly match the requested domain.
 #     Local domains are always exempt from hostblocking.
 #     Default: piwik.org
+#
+# enable-pdfjs (Bool):
+#     Enable pdf.js to view PDF files in the browser.
+#     Note that the files can still be downloaded by clicking the
+#     download button in the pdf.js viewer.
+#     Valid values: true, false
+#     Default: false
 allow-images = true
 allow-javascript = true
 allow-plugins = true
@@ -841,6 +874,7 @@ cookies-store = true
 host-block-lists = http://www.malwaredomainlist.com/hostslist/hosts.txt,http://someonewhocares.org/hosts/hosts,http://winhelp2002.mvps.org/hosts.zip,http://malwaredomains.lehigh.edu/files/justdomains.zip,http://pgl.yoyo.org/adservers/serverlist.php?hostformat=hosts&mimetype=plaintext
 host-blocking-enabled = true
 host-blocking-whitelist = piwik.org
+enable-pdfjs = false
 
 [hints]
 # Hinting settings.
@@ -853,18 +887,20 @@ host-blocking-whitelist = piwik.org
 #     Opacity for hints.
 #     Default: 0.7
 #
-# mode:
+# mode (String):
 #     Mode to use for hints.
 #         number: Use numeric hints.
 #         letter: Use the chars in the hints -> chars setting.
+#         word: Use hints words based on the html elements and the extra
+#     words.
 #     Default: letter
 #
-# chars (String):
+# chars (UniqueCharString):
 #     Chars used for hint strings.
 #     Default: asdfghjkl
 #
 # min-chars (Int):
-#     Mininum number of chars used for hint strings.
+#     Minimum number of chars used for hint strings.
 #     Default: 1
 #
 # scatter (Bool):
@@ -878,8 +914,13 @@ host-blocking-whitelist = piwik.org
 #     Valid values: true, false
 #     Default: false
 #
+# dictionary (File):
+#     The dictionary file to be used by the word hints.
+#     Default: /usr/share/dict/words
+#
 # auto-follow (Bool):
-#     Whether to auto-follow a hint if there's only one left.
+#     Follow a hint immediately when the hint text is completely
+#     matched.
 #     Valid values: true, false
 #     Default: true
 #
@@ -898,6 +939,7 @@ chars = asdfghjklqwertyuiopzxcvbnm
 min-chars = 1
 scatter = true
 uppercase = false
+dictionary = /usr/share/dict/words
 auto-follow = true
 next-regexes = \bnext\b,\bmore\b,\bnewer\b,\b[>→≫]\b,\b(>>|»)\b,\bcontinue\b
 prev-regexes = \bprev(ious)?\b,\bback\b,\bolder\b,\b[<←≪]\b,\b(<<|«)\b
@@ -983,12 +1025,20 @@ aur = open http://www.aur.archlinux.org
 #     Foreground color of the matched text in the completion.
 #     Default: #ff4444
 #
+# completion.scrollbar.fg (QssColor):
+#     Color of the scrollbar handle in completion view.
+#     Default: ${completion.fg}
+#
+# completion.scrollbar.bg (QssColor):
+#     Color of the scrollbar in completion view
+#     Default: ${completion.bg}
+#
 # statusbar.fg (QssColor):
 #     Foreground color of the statusbar.
 #     Default: white
 #
 # statusbar.bg (QssColor):
-#     Foreground color of the statusbar.
+#     Background color of the statusbar.
 #     Default: black
 #
 # statusbar.fg.error (QssColor):
@@ -1056,7 +1106,13 @@ aur = open http://www.aur.archlinux.org
 #     Default: ${statusbar.fg}
 #
 # statusbar.url.fg.success (QssColor):
-#     Foreground color of the URL in the statusbar on successful load.
+#     Foreground color of the URL in the statusbar on successful load
+#     (http).
+#     Default: white
+#
+# statusbar.url.fg.success.https (QssColor):
+#     Foreground color of the URL in the statusbar on successful load
+#     (https).
 #     Default: lime
 #
 # statusbar.url.fg.error (QssColor):
@@ -1120,11 +1176,12 @@ aur = open http://www.aur.archlinux.org
 #     Color for the tab indicator on errors..
 #     Default: #ff0000
 #
-# tabs.indicator.system:
+# tabs.indicator.system (ColorSystem):
 #     Color gradient interpolation system for the tab indicator.
 #         rgb: Interpolate in the RGB color system.
 #         hsv: Interpolate in the HSV color system.
 #         hsl: Interpolate in the HSL color system.
+#         none: Don't show a gradient.
 #     Default: rgb
 #
 # hints.fg (CssColor):
@@ -1160,18 +1217,20 @@ aur = open http://www.aur.archlinux.org
 #     Color gradient stop for download backgrounds.
 #     Default: #00aa00
 #
-# downloads.fg.system:
+# downloads.fg.system (ColorSystem):
 #     Color gradient interpolation system for download text.
 #         rgb: Interpolate in the RGB color system.
 #         hsv: Interpolate in the HSV color system.
 #         hsl: Interpolate in the HSL color system.
+#         none: Don't show a gradient.
 #     Default: rgb
 #
-# downloads.bg.system:
+# downloads.bg.system (ColorSystem):
 #     Color gradient interpolation system for download backgrounds.
 #         rgb: Interpolate in the RGB color system.
 #         hsv: Interpolate in the HSV color system.
 #         hsl: Interpolate in the HSL color system.
+#         none: Don't show a gradient.
 #     Default: rgb
 #
 # downloads.fg.error (QtColor):
@@ -1198,6 +1257,8 @@ completion.item.selected.bg = #e8c000
 completion.item.selected.border.top = #bbbb00
 completion.item.selected.border.bottom = ${completion.item.selected.border.top}
 completion.match.fg = #ff4444
+completion.scrollbar.fg = ${completion.fg}
+completion.scrollbar.bg = ${completion.bg}
 statusbar.fg = white
 statusbar.bg = black
 statusbar.fg.error = ${statusbar.fg}
@@ -1217,6 +1278,7 @@ statusbar.bg.caret-selection = #a12dff
 statusbar.progress.bg = white
 statusbar.url.fg = ${statusbar.fg}
 statusbar.url.fg.success = lime
+statusbar.url.fg.success.https = lime
 statusbar.url.fg.error = orange
 statusbar.url.fg.warn = yellow
 statusbar.url.fg.hover = aqua
@@ -1256,8 +1318,8 @@ webpage.bg = white
 # _monospace (Font):
 #     Default monospace fonts.
 #     Default: Terminus, Monospace, "DejaVu Sans Mono", Monaco,
-#     "Bitstream Vera Sans Mono", "Andale Mono", "Liberation Mono",
-#     "Courier New", Courier, monospace, Fixed, Consolas, Terminal
+#     "Bitstream Vera Sans Mono", "Andale Mono", "Courier New", Courier,
+#     "Liberation Mono", monospace, Fixed, Consolas, Terminal
 #
 # completion (Font):
 #     Font used in the completion widget.
