--- a/gtk/gtk-3.0/settings.ini
+++ b/gtk/gtk-3.0/settings.ini
@@ -1,4 +1,16 @@
 [Settings]
-gtk-color-scheme = "base_color:#161616\nbg_color:#2c2c2c\ntooltip_bg_color:#020202\nselected_bg_color:#006aa8\ntext_color:#dbdbdb\nfg_color:#cdcdcd;\ntooltip_fg_color:#f8f8f8\nselected_fg_color:#ffffff"
-gtk-auto-mnemonics = 1
-gtk-visible-focus = automatic
+gtk-theme-name=Arc-Dark
+gtk-icon-theme-name=Archdroid-Grey
+gtk-font-name=Quantico 11
+gtk-cursor-theme-name=Neutral
+gtk-cursor-theme-size=0
+gtk-toolbar-style=GTK_TOOLBAR_BOTH
+gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
+gtk-button-images=1
+gtk-menu-images=1
+gtk-enable-event-sounds=1
+gtk-enable-input-feedback-sounds=1
+gtk-xft-antialias=1
+gtk-xft-hinting=1
+gtk-xft-hintstyle=hintfull
+gtk-modules=gail:atk-bridge
