MOdified some qutebrowser keybindings
Added search engine shortcuts

--- a/qutebrowser/keys.conf
+++ b/qutebrowser/keys.conf
@@ -41,14 +41,14 @@
 [!normal]
 
 clear-keychain ;; leave-mode
-    <Escape>
-    <Ctrl-[>
+    <escape>
+    <ctrl-[>
 
 [normal]
 # Keybindings for normal mode.
 
 clear-keychain ;; search
-    <Escape>
+    <escape>
 
 set-cmd-text -s :open
     o
@@ -77,11 +77,11 @@ set-cmd-text :open -w {url}
 
 open -t
     ga
-    <Ctrl-T>
+    <ctrl-t>
 
 tab-close
     d
-    <Ctrl-W>
+    <ctrl-w>
 
 tab-close -o
     D
@@ -92,23 +92,23 @@ tab-only
 tab-focus
     J
     gt
-    <Right>
+    <right>
 
 tab-move
     gm
 
 tab-move -
     gl
-    <Ctrl-Left>
+    <ctrl-left>
 
 tab-move +
     gr
-    <Ctrl-Right>
+    <ctrl-right>
 
 tab-prev
     K
     gT
-    <Left>
+    <left>
 
 tab-clone
     gC
@@ -121,26 +121,26 @@ reload -f
 
 back
     H
-    <PgUp>
+    <pgup>
 
 back -t
-    th
+    #th
 
 back -w
     wh
 
 forward
     L
-    <PgDown>
+    <pgdown>
 
 forward -t
-    tl
+    #tl
 
 forward -w
     wl
 
 fullscreen
-    <F11>
+    <f11>
 
 hint
     f
@@ -207,7 +207,7 @@ scroll right
 
 undo
     u
-    <Ctrl-Shift-T>
+    <ctrl-shift-t>
 
 scroll-perc 0
     gg
@@ -301,17 +301,17 @@ set-cmd-text -s :set keybind
     sk
 
 set-cmd-text -s :restart
-    <Ctrl+R>
+    <ctrl+r>
 
 zoom-out
     -
     zo
-    <Ctrl+PgDown>
+    <ctrl+pgdown>
 
 zoom-in
     +
     zi
-    <Ctrl+PgUp>
+    <ctrl+pgup>
 
 zoom
     =
@@ -336,10 +336,10 @@ navigate up -t
     gU
 
 navigate increment
-    <Ctrl-A>
+    <ctrl-a>
 
 navigate decrement
-    <Ctrl-X>
+    <ctrl-x>
 
 inspector
     wi
@@ -357,77 +357,92 @@ view-source
     gf
 
 tab-focus last
-    <Ctrl-Tab>
+    <ctrl-tab>
 
 enter-mode passthrough
-    <Ctrl-V>
+    <ctrl-v>
 
 quit
-    <Ctrl-Q>
+    <ctrl-q>
 
 scroll-page 0 1
-    <Ctrl-F>
+    <ctrl-f>
 
 scroll-page 0 -1
-    <Ctrl-B>
+    <ctrl-b>
 
 scroll-page 0 0.5
-    <Ctrl-D>
+    <ctrl-d>
 
 scroll-page 0 -0.5
-    <Ctrl-U>
+    <ctrl-u>
 
 tab-focus 1
-    <Alt-1>
+    <ctrl-1>
 
 tab-focus 2
-    <Alt-2>
+    <ctrl-2>
 
 tab-focus 3
-    <Alt-3>
+    <ctrl-3>
 
 tab-focus 4
-    <Alt-4>
+    <ctrl-4>
 
 tab-focus 5
-    <Alt-5>
+    <ctrl-5>
 
 tab-focus 6
-    <Alt-6>
+    <ctrl-6>
 
 tab-focus 7
-    <Alt-7>
+    <ctrl-7>
 
 tab-focus 8
-    <Alt-8>
+    <ctrl-8>
 
 tab-focus 9
-    <Alt-9>
+    <ctrl-9>
 
 home
-    <Ctrl-h>
+    <ctrl-h>
 
 stop
-    <Ctrl-s>
+    <ctrl-s>
 
 print
-    <Ctrl-Alt-p>
+    <ctrl-alt-p>
 
 open qute:settings
     Ss
     SS
 
 follow-selected
-    <Return>
-    <Ctrl-M>
-    <Ctrl-J>
-    <Shift-Return>
-    <Enter>
-    <Shift-Enter>
+    <return>
+    <ctrl-m>
+    <ctrl-j>
+    <shift-return>
+    <enter>
+    <shift-enter>
 
 follow-selected -t
-    <Ctrl-Return>
-    <Ctrl-Enter>
+    <ctrl-return>
+    <ctrl-enter>
+
+open -w
+    <ctrl-n>
+
+enter-mode set_mark
+    `
+
+yank -p
+    yp
+
+yank -ps
+    yP
+
+spawn mpv {url}
+    x
 
 [insert]
 # Keybindings for insert mode.
@@ -438,10 +453,10 @@ follow-selected -t
 #  * `paste-primary`: Paste primary selection at cursor position.
 
 open-editor
-    <Ctrl-E>
+    <ctrl-e>
 
 paste-primary
-    <Shift-Ins>
+    <shift-ins>
 
 [hint]
 # Keybindings for hint mode.
@@ -451,21 +466,21 @@ paste-primary
 #  * `follow-hint`: Follow the currently selected hint.
 
 follow-hint
-    <Return>
-    <Ctrl-M>
-    <Ctrl-J>
-    <Shift-Return>
-    <Enter>
-    <Shift-Enter>
+    <return>
+    <ctrl-m>
+    <ctrl-j>
+    <shift-return>
+    <enter>
+    <shift-enter>
 
 hint --rapid links tab-bg
-    <Ctrl-R>
+    <ctrl-r>
 
 hint links
-    <Ctrl-F>
+    <ctrl-f>
 
 hint all tab-bg
-    <Ctrl-B>
+    <ctrl-b>
 
 [command]
 # Keybindings for command mode.
@@ -479,29 +494,29 @@ hint all tab-bg
 #  * `command-accept`: Execute the command currently in the commandline.
 
 command-history-prev
-    <Ctrl-P>
-    <Up>
+    <ctrl-p>
+    <up>
 
 command-history-next
-    <Ctrl-N>
-    <Down>
+    <ctrl-n>
+    <down>
 
 completion-item-prev
-    <Shift-Tab>
+    <shift-tab>
 
 completion-item-next
-    <Tab>
+    <tab>
 
 completion-item-del
-    <Ctrl-D>
+    <ctrl-d>
 
 command-accept
-    <Return>
-    <Ctrl-M>
-    <Ctrl-J>
-    <Shift-Return>
-    <Enter>
-    <Shift-Enter>
+    <return>
+    <ctrl-m>
+    <ctrl-j>
+    <shift-return>
+    <enter>
+    <shift-enter>
 
 [prompt]
 # Keybindings for prompts in the status line.
@@ -514,12 +529,12 @@ command-accept
 #  * `prompt-no`: Answer no to a yes/no question.
 
 prompt-accept
-    <Return>
-    <Ctrl-M>
-    <Ctrl-J>
-    <Shift-Return>
-    <Enter>
-    <Shift-Enter>
+    <return>
+    <ctrl-m>
+    <ctrl-j>
+    <shift-return>
+    <enter>
+    <shift-enter>
 
 prompt-yes
     y
@@ -530,53 +545,53 @@ prompt-no
 [command,prompt]
 
 rl-backward-char
-    <Ctrl-B>
+    <ctrl-b>
 
 rl-forward-char
-    <Ctrl-F>
+    <ctrl-f>
 
 rl-backward-word
-    <Alt-B>
+    <alt-b>
 
 rl-forward-word
-    <Alt-F>
+    <alt-f>
 
 rl-beginning-of-line
-    <Ctrl-A>
+    <ctrl-a>
 
 rl-end-of-line
-    <Ctrl-E>
+    <ctrl-e>
 
 rl-unix-line-discard
-    <Ctrl-U>
+    <ctrl-u>
 
 rl-kill-line
-    <Ctrl-K>
+    <ctrl-k>
 
 rl-kill-word
-    <Alt-D>
+    <alt-d>
 
 rl-unix-word-rubout
-    <Ctrl-W>
-    <Alt-Backspace>
+    <ctrl-w>
+    <alt-backspace>
 
 rl-yank
-    <Ctrl-Y>
+    <ctrl-y>
 
 rl-delete-char
-    <Ctrl-?>
+    <ctrl-?>
 
 rl-backward-delete-char
-    <Ctrl-H>
+    <ctrl-h>
 
 [caret]
 
 toggle-selection
     v
-    <Space>
+    <space>
 
 drop-selection
-    <Ctrl-Space>
+    <ctrl-space>
 
 enter-mode normal
     c
@@ -631,12 +646,12 @@ yank-selected -p
 
 yank-selected
     y
-    <Return>
-    <Ctrl-M>
-    <Ctrl-J>
-    <Shift-Return>
-    <Enter>
-    <Shift-Enter>
+    <return>
+    <ctrl-m>
+    <ctrl-j>
+    <shift-return>
+    <enter>
+    <shift-enter>
 
 scroll left
     H
@@ -649,4 +664,10 @@ scroll up
 
 scroll right
     L
+
+spawn mpv {url}
+    x
+
+hint links spawn mpv {hint-url}
+    X
 
