--- a/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/qutebrowser.conf
@@ -159,18 +159,18 @@ default-page = ${startpage}
 auto-search = naive
 auto-save-config = true
 auto-save-interval = 15000
-editor = vim -f "{}"
+editor = termite -e 'vim -p "{}"'
 editor-encoding = utf-8
 private-browsing = false
 developer-extras = true
 print-element-backgrounds = true
 xss-auditing = false
 site-specific-quirks = true
-default-encoding = 
+default-encoding =
 new-instance-open-target = tab
 log-javascript-console = none
 save-session = true
-session-default-name = 
+session-default-name =
 url-incdec-segments = path,query
 
 [ui]
@@ -280,25 +280,32 @@ url-incdec-segments = path,query
 #     Hide the window decoration when using wayland (requires restart)
 #     Valid values: true, false
 #     Default: false
+#
+# keyhint-blacklist (List):
+#     Keychains that shouldn't be shown in the keyhint dialog
+#     Globs are supported, so ';*' will blacklist all keychainsstarting
+#     with ';'. Use '*' to disable keyhints
+#     Default:
 zoom-levels = 25%,33%,50%,67%,75%,90%,100%,110%,125%,150%,175%,200%,250%,300%,400%,500%
 default-zoom = 120%
 downloads-position = bottom
 message-timeout = 2000
 message-unfocused = false
 confirm-quit = never
-display-statusbar-messages = false
+display-statusbar-messages = true
 zoom-text-only = false
 frame-flattening = false
 user-stylesheet = ::-webkit-scrollbar { width: 0px; height: 0px; }
-css-media-type = 
+css-media-type =
 smooth-scrolling = true
 remove-finished-downloads = -1
 hide-statusbar = false
 statusbar-padding = 1,1,0,0
-window-title-format = {perc}{title}{title_sep}qutebrowser
+window-title-format = {perc}{title}{title_sep}
 hide-mouse-cursor = false
 modal-js-dialog = false
 hide-wayland-decoration = false
+keyhint-blacklist =
 
 [network]
 # Settings related to the network.
@@ -347,14 +354,19 @@ hide-wayland-decoration = false
 #     Whether to try to pre-fetch DNS entries to speed up browsing.
 #     Valid values: true, false
 #     Default: true
+#
+# custom-headers (HeaderDict):
+#     Set custom headers for qutebrowser HTTP requests.
+#     Default:
 do-not-track = true
 accept-language = en-US,en
 referer-header = same-domain
-user-agent = 
+user-agent = Mozilla/5.0 (X11; Linux x86_64; rv:10.0) Gecko/20100101 Firefox/47.0
 proxy = system
 proxy-dns-requests = true
 ssl-strict = ask
 dns-prefetch = true
+custom-headers =
 
 [completion]
 # Options related to completion and command history.
@@ -431,11 +443,15 @@ scrollbar-padding = 2
 #
 # timeout (Int):
 #     Timeout for ambiguous key bindings.
+#     If the current input forms both a complete match and a partial
+#     match, the complete match will be executed after this time.
 #     Default: 500
 #
 # partial-timeout (Int):
 #     Timeout for partially typed key bindings.
-#     Default: 1000
+#     If the current input forms only partial matches, the keystring
+#     will be cleared after this time.
+#     Default: 5000
 #
 # insert-mode-on-plugins (Bool):
 #     Whether to switch to insert mode when clicking flash and other
@@ -623,7 +639,7 @@ mouse-zoom-divider = 512
 #     Padding for indicators (top, bottom, left, right).
 #     Default: 2,2,0,4
 background-tabs = true
-select-on-remove = previous
+select-on-remove = right
 new-tab-position = right
 new-tab-position-explicit = last
 last-close = startpage
@@ -720,10 +736,10 @@ indicator-padding = 2,2,0,4
 download-directory = ~/dwl
 prompt-download-directory = true
 remember-download-directory = true
-maximum-pages-in-cache = 
-object-cache-capacities = 
-offline-storage-default-quota = 
-offline-web-application-cache-quota = 
+maximum-pages-in-cache =
+object-cache-capacities =
+offline-storage-default-quota =
+offline-web-application-cache-quota =
 offline-storage-database = true
 offline-web-application-storage = true
 local-storage = true
@@ -752,7 +768,7 @@ cache-size = 52428800
 # webgl (Bool):
 #     Enables or disables WebGL.
 #     Valid values: true, false
-#     Default: true
+#     Default: false
 #
 # css-regions (Bool):
 #     Enable or disable support for CSS regions.
@@ -861,7 +877,7 @@ webgl = true
 css-regions = true
 hyperlink-auditing = false
 geolocation = ask
-notifications = ask
+notifications = true
 javascript-can-open-windows = false
 javascript-can-close-windows = false
 javascript-can-access-clipboard = false
@@ -905,7 +921,7 @@ enable-pdfjs = false
 #
 # scatter (Bool):
 #     Whether to scatter hint key chains (like Vimium) or not (like
-#     dwb).
+#     dwb). Ignored for number hints.
 #     Valid values: true, false
 #     Default: true
 #
@@ -924,6 +940,11 @@ enable-pdfjs = false
 #     Valid values: true, false
 #     Default: true
 #
+# auto-follow-timeout (Int):
+#     A timeout to inhibit normal-mode key bindings after a
+#     successfulauto-follow.
+#     Default: 0
+#
 # next-regexes (RegexList):
 #     A comma-separated list of regexes to use for 'next' links.
 #     Default:
@@ -932,6 +953,12 @@ enable-pdfjs = false
 # prev-regexes (RegexList):
 #     A comma-separated list of regexes to use for 'prev' links.
 #     Default: \bprev(ious)?\b,\bback\b,\bolder\b,\b[<←≪]\b,\b(<<|«)\b
+#
+# find-implementation (String):
+#     Which implementation to use to find elements to hint.
+#         javascript: Better but slower
+#         python: Slightly worse but faster
+#     Default: javascript
 border = 1px solid #E3BE23
 opacity = 0.9
 mode = letter
@@ -941,8 +968,10 @@ scatter = true
 uppercase = false
 dictionary = /usr/share/dict/words
 auto-follow = true
+auto-follow-timeout = 0
 next-regexes = \bnext\b,\bmore\b,\bnewer\b,\b[>→≫]\b,\b(>>|»)\b,\bcontinue\b
 prev-regexes = \bprev(ious)?\b,\bback\b,\bolder\b,\b[<←≪]\b,\b(<<|«)\b
+find-implementation = javascript
 
 [searchengines]
 # Definitions of search engines which can be used via the address bar.
@@ -953,13 +982,24 @@ prev-regexes = \bprev(ious)?\b,\bback\b,\bolder\b,\b[<←≪]\b,\b(<<|«)\b
 # replaced by the search term, use `{{` and `}}` for literal `{`/`}`
 # signs.
 DEFAULT = https://duckduckgo.com/?q={}
+google = https://www.google.com/search?hl=en&q={}
+gg = ${google}
+
+aur = https://aur.archlinux.org/packages/?O=0&K={}
+de = https://translate.google.com/#de/en/{}
+dir = https://www.google.ch/maps/dir/{}
+ed = https://translate.google.com/#en/de/{}
+map = https://www.google.ch/maps/place/{}
+pac = https://www.archlinux.org/packages/?q={}
+r = https://www.ricardo.ch/search/index/?IsNavBarSearch=true&SearchSentence={}&CategoryNr=1&UseDescription=true&SearchId=zkWwfYwgUehWDbPxW3EhSI
+wiki = https://en.wikipedia.org/wiki/{}
+yt = https://www.youtube.com/results?search_query={}
 
 [aliases]
 # Aliases for commands.
 # By default, no aliases are defined. Example which adds a new command
 # `:qtb` to open qutebrowsers website:
 # `qtb = open http://www.qutebrowser.org/`
-aur = open http://www.aur.archlinux.org
 
 [colors]
 # Colors used in the UI.
@@ -1245,6 +1285,18 @@ aur = open http://www.aur.archlinux.org
 #     Background color for webpages if unset (or empty to use the
 #     theme's color)
 #     Default: white
+#
+# keyhint.fg (QssColor):
+#     Text color for the keyhint widget.
+#     Default: #FFFFFF
+#
+# keyhint.fg.suffix (CssColor):
+#     Highlight color for keys to complete the current keychain
+#     Default: #FFFF00
+#
+# keyhint.bg (QssColor):
+#     Background color of the keyhint widget.
+#     Default: rgba(0, 0, 0, 80%)
 completion.fg = white
 completion.bg = #333333
 completion.alternate-bg = #444444
@@ -1308,6 +1360,9 @@ downloads.bg.system = rgb
 downloads.fg.error = white
 downloads.bg.error = red
 webpage.bg = white
+keyhint.fg = #FFFFFF
+keyhint.fg.suffix = #FFFF00
+keyhint.bg = rgba(0, 0, 0, 80%)
 
 [fonts]
 # Fonts used for the UI, with optional style/weight/size.
@@ -1384,6 +1439,10 @@ webpage.bg = white
 # web-size-default-fixed (Int):
 #     The default font size for fixed-pitch text.
 #     Default:
+#
+# keyhint (Font):
+#     Font used in the keyhint widget.
+#     Default: 8pt ${_monospace}
 _monospace = Terminus, Monospace, "DejaVu Sans Mono", Monaco, "Bitstream Vera Sans Mono", "Andale Mono", "Liberation Mono", "Courier New", Courier, monospace, Fixed, Consolas, Terminal
 completion = 11pt ${_monospace}
 tabbar = 11pt ${_monospace}
@@ -1391,13 +1450,14 @@ statusbar = 11pt ${_monospace}
 downloads = 11pt ${_monospace}
 hints = bold 23px Monospace
 debug-console = 11pt ${_monospace}
-web-family-standard = 
-web-family-fixed = 
-web-family-serif = 
-web-family-sans-serif = 
-web-family-cursive = 
-web-family-fantasy = 
-web-size-minimum = 
-web-size-minimum-logical = 
-web-size-default = 
-web-size-default-fixed = 
+web-family-standard =
+web-family-fixed =
+web-family-serif =
+web-family-sans-serif =
+web-family-cursive =
+web-family-fantasy =
+web-size-minimum =
+web-size-minimum-logical =
+web-size-default =
+web-size-default-fixed =
+keyhint = 8pt ${_monospace}
