--- a/qutebrowser/qsettings/QtProject.conf
+++ b/qutebrowser/qsettings/QtProject.conf
@@ -1,7 +1,7 @@
 [FileDialog]
-history=file:///home/cee/dwl
-lastVisited=file:///home/cee/dwl
-qtVersion=5.5.0
+history=file:///home/cee/dwl, file:///home/cee/src/py/bitmap-font-builder
+lastVisited=file:///home/cee/src/py/bitmap-font-builder
+qtVersion=5.6.0
 shortcuts=file:, file:///home/cee
 sidebarWidth=99
 treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\x34\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0s\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\x1\x1e\0\0\0\x1\0\0\0\0\0\0\0J\0\0\0\x1\0\0\0\0\0\0\0J\0\0\0\x1\0\0\0\0\0\0\0\x82\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0)
